deployment/k8s/istio/01-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: devapp-gateway
  namespace: devapp
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: devapp-vs
  namespace: devapp
spec:
  hosts:
  - "*"
  gateways:
  - devapp-gateway
  http:
  - match:
    - uri:
        prefix: /api/users
    route:
    - destination:
        host: user-app
        port:
          number: 8080
  - match:
    - uri:
        prefix: /api/orders
    route:
    - destination:
        host: order-app
        port:
          number: 8081
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        host: keycloak
        port:
          number: 8080
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: devapp-web
        port:
          number: 80
